# mbidled

./: .clang-format  Makefile  channel.c  channel.h  imap.c  imap.h  maildir.c  mbconfig.c  mbconfig.h  mbidled.1  mbidled.c  mbidled.h  meson.build  test.js  ts.h  version.h.in
test/: Makefile  helpers.mjs  index.mjs  run-tests.mjs  test.mjs
